--- a/appspec.yml
+++ b/appspec.yml
@@ -1,10 +1,5 @@
 version: 0.0
-OS:linux
+os: linux
 files:
    - source:/index.html
-     destination: /var/www/html
-hooks:
- Beforeinstall:
- 
-
- ApplicationStop:   
+     destination: /var/www/html  
